--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "babel-preset-react-app": "^3.0.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.25.0",
+    "child_process": "^1.0.2",
+    "chrome-fs": "^10.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.11.2",
     "fs": "^0.0.1-security",
@@ -21,13 +23,15 @@
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "2.24.1",
     "lokijs": "^1.5.0",
+    "net": "^1.0.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "style-loader": "^0.13.0",
+    "tls": "^0.0.1",
     "vtt-json": "^1.0.1",
     "webpack": "2.2.1",
     "webpack-dev-server": "^2.3.0",
     "write-file-webpack-plugin": "3.4.2",
-    "youtube-dl": "^1.11.1"
+    "youtube-dl": "git+https://github.com/moaazsidat/node-youtube-dl.git"
   }
 }
