--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,7 +14,9 @@
   "manifest_version": 2,
   "permissions": [ 
     "background",
-    "tabs"
+    "tabs",
+    "storage",
+    "unlimitedStorage"
   ],
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
